src/objects/FSTR__PCE_Default_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__AccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Default_Account_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__TeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Default_Account_Teams1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Default Team Member</label>
    <listViews>
        <fullName>FSTR__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DTM-{00000}</displayFormat>
        <label>Default Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>